src/log.txt
In file included from ../include/Widget.hpp:10:0,
                 from Widget.cpp:1:
../include/EventEmitter.hpp: In member function ‘void wl::EventEmitter<EV>::fireEvent(const EV&)’:
../include/EventEmitter.hpp:73:9: error: ‘propagate’ was not declared in this scope
     if (propagate && !handled && m_this_widget)
         ^
../include/EventEmitter.hpp:75:34: error: invalid use of incomplete type ‘class wl::Widget’
       auto parent = m_this_widget->getParent();
                                  ^
In file included from ../include/Observer.hpp:4:0,
                 from ../include/EventEmitter.hpp:7,
                 from ../include/Widget.hpp:10,
                 from Widget.cpp:1:
../include/evt/Event.hpp:6:7: note: forward declaration of ‘class wl::Widget’
 class Widget;
       ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp: In member function ‘void wl::Widget::setWidth(int)’:
../include/Widget.hpp:147:59: error: ‘fireResizeEvent’ was not declared in this scope
       fireResizeEvent(ResizeEvent(this, m_width, m_height));
                                                           ^
../include/Widget.hpp: In member function ‘void wl::Widget::setHeight(int)’:
../include/Widget.hpp:163:59: error: ‘fireResizeEvent’ was not declared in this scope
       fireResizeEvent(ResizeEvent(this, m_width, m_height));
                                                           ^
../include/Widget.hpp: In member function ‘void wl::Widget::setSize(int, int)’:
../include/Widget.hpp:184:59: error: ‘fireResizeEvent’ was not declared in this scope
       fireResizeEvent(ResizeEvent(this, m_width, m_height));
                                                           ^
Widget.cpp: In constructor ‘wl::Widget::Widget(wl::Vec2, int, int)’:
Widget.cpp:27:32: error: no matching function for call to ‘wl::EventEmitter<wl::FocusEvent>::EventEmitter()’
     m_background_colour(0, 0, 0)
                                ^
In file included from ../include/Widget.hpp:10:0,
                 from Widget.cpp:1:
../include/EventEmitter.hpp:35:3: note: candidate: wl::EventEmitter<EV>::EventEmitter(wl::Widget*, bool) [with EV = wl::FocusEvent]
   EventEmitter(Widget *this_widget,
   ^
../include/EventEmitter.hpp:35:3: note:   candidate expects 2 arguments, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::FocusEvent>::EventEmitter(const wl::EventEmitter<wl::FocusEvent>&)
 class EventEmitter
       ^
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::FocusEvent>::EventEmitter(wl::EventEmitter<wl::FocusEvent>&&)
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
Widget.cpp:27:32: error: no matching function for call to ‘wl::EventEmitter<wl::KeyEvent>::EventEmitter()’
     m_background_colour(0, 0, 0)
                                ^
In file included from ../include/Widget.hpp:10:0,
                 from Widget.cpp:1:
../include/EventEmitter.hpp:35:3: note: candidate: wl::EventEmitter<EV>::EventEmitter(wl::Widget*, bool) [with EV = wl::KeyEvent]
   EventEmitter(Widget *this_widget,
   ^
../include/EventEmitter.hpp:35:3: note:   candidate expects 2 arguments, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::KeyEvent>::EventEmitter(const wl::EventEmitter<wl::KeyEvent>&)
 class EventEmitter
       ^
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::KeyEvent>::EventEmitter(wl::EventEmitter<wl::KeyEvent>&&)
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
Widget.cpp:27:32: error: no matching function for call to ‘wl::EventEmitter<wl::MouseEvent>::EventEmitter()’
     m_background_colour(0, 0, 0)
                                ^
In file included from ../include/Widget.hpp:10:0,
                 from Widget.cpp:1:
../include/EventEmitter.hpp:35:3: note: candidate: wl::EventEmitter<EV>::EventEmitter(wl::Widget*, bool) [with EV = wl::MouseEvent]
   EventEmitter(Widget *this_widget,
   ^
../include/EventEmitter.hpp:35:3: note:   candidate expects 2 arguments, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::MouseEvent>::EventEmitter(const wl::EventEmitter<wl::MouseEvent>&)
 class EventEmitter
       ^
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::MouseEvent>::EventEmitter(wl::EventEmitter<wl::MouseEvent>&&)
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
Widget.cpp:27:32: error: no matching function for call to ‘wl::EventEmitter<wl::ResizeEvent>::EventEmitter()’
     m_background_colour(0, 0, 0)
                                ^
In file included from ../include/Widget.hpp:10:0,
                 from Widget.cpp:1:
../include/EventEmitter.hpp:35:3: note: candidate: wl::EventEmitter<EV>::EventEmitter(wl::Widget*, bool) [with EV = wl::ResizeEvent]
   EventEmitter(Widget *this_widget,
   ^
../include/EventEmitter.hpp:35:3: note:   candidate expects 2 arguments, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::ResizeEvent>::EventEmitter(const wl::EventEmitter<wl::ResizeEvent>&)
 class EventEmitter
       ^
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
../include/EventEmitter.hpp:24:7: note: candidate: wl::EventEmitter<wl::ResizeEvent>::EventEmitter(wl::EventEmitter<wl::ResizeEvent>&&)
../include/EventEmitter.hpp:24:7: note:   candidate expects 1 argument, 0 provided
Widget.cpp: At global scope:
Widget.cpp:52:24: error: no ‘void wl::Widget::grabFocus()’ member function declared in class ‘wl::Widget’
 void Widget::grabFocus()
                        ^
Widget.cpp: In member function ‘bool wl::Widget::send_mouse_evt_to_observers(const wl::MouseEvent&)’:
Widget.cpp:83:26: error: invalid use of incomplete type ‘class wl::MouseObserver’
       handled |= observer->handleMouseEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:26:7: note: forward declaration of ‘class wl::MouseObserver’
 class MouseObserver;
       ^
Widget.cpp:89:26: error: invalid use of incomplete type ‘class wl::MouseObserver’
       handled |= observer->handleMouseEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:26:7: note: forward declaration of ‘class wl::MouseObserver’
 class MouseObserver;
       ^
Widget.cpp: In member function ‘bool wl::Widget::send_key_evt_to_observers(const wl::KeyEvent&)’:
Widget.cpp:101:26: error: invalid use of incomplete type ‘class wl::KeyObserver’
       handled |= observer->handleKeyEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:24:7: note: forward declaration of ‘class wl::KeyObserver’
 class KeyObserver;
       ^
Widget.cpp:107:26: error: invalid use of incomplete type ‘class wl::KeyObserver’
       handled |= observer->handleKeyEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:24:7: note: forward declaration of ‘class wl::KeyObserver’
 class KeyObserver;
       ^
Widget.cpp: In member function ‘bool wl::Widget::send_resize_evt_to_observers(const wl::ResizeEvent&)’:
Widget.cpp:119:26: error: invalid use of incomplete type ‘class wl::ResizeObserver’
       handled |= observer->handleResizeEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:27:7: note: forward declaration of ‘class wl::ResizeObserver’
 class ResizeObserver;
       ^
Widget.cpp:125:26: error: invalid use of incomplete type ‘class wl::ResizeObserver’
       handled |= observer->handleResizeEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:27:7: note: forward declaration of ‘class wl::ResizeObserver’
 class ResizeObserver;
       ^
Widget.cpp: In member function ‘bool wl::Widget::send_focus_evt_to_observers(const wl::FocusEvent&)’:
Widget.cpp:137:26: error: invalid use of incomplete type ‘class wl::FocusObserver’
       handled |= observer->handleFocusEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:22:7: note: forward declaration of ‘class wl::FocusObserver’
 class FocusObserver;
       ^
Widget.cpp:143:26: error: invalid use of incomplete type ‘class wl::FocusObserver’
       handled |= observer->handleFocusEvent(evt);
                          ^
In file included from Widget.cpp:1:0:
../include/Widget.hpp:22:7: note: forward declaration of ‘class wl::FocusObserver’
 class FocusObserver;
       ^
